# awesome-python-template

./: .gitignore  CONTRIBUTING.md  README.md  poe_tasks.toml  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: autofix-command.yml  ci.yml  docs-build.yml  docs-generate.yml  docs-publish.yml  format-check.yml  lint-check.yml  lock-command.yml  poe-command.yml  pr-welcome.yml  prerelease-command.yml  publish.yml  pytest-fast.yml  pytest-matrix.yml  release-drafter.yml  semantic-pr-check.yml  semver-label-check.yml  setup-labels.yml  slash-command-dispatch.yml  test-command.yml  tk-todo-check.yml  validate-build.yml
src/awesome_python_template/: __init__.py
src/awesome_python_template/example_submodule/: __init__.py  _private_module.py  public_module.py
