[project]
name = "awesome-python-template"
version = "0.1.0"
description = "A modern Python project template with best practices and tooling"
readme = "README.md"
authors = [
    { name = "Aaron Steers", email = "aaron@aaronsteers.com" }
]
requires-python = ">=3.8"
dependencies = []
license = { file = "LICENSE" }
keywords = ["template", "scaffold", "python", "modern"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "poethepoet>=0.24.0",
]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.poe.tasks]
# Linting and formatting
lint = "ruff check ."
format = "ruff format ."
format-check = "ruff format --check ."

# Testing  
test = "pytest"
test-fast = "pytest -x"
test-cov = "pytest --cov=awesome_python_template --cov-report=html"
test-unit = "pytest -m unit"
test-integration = "pytest -m integration"

# Combined tasks
check = ["format-check", "lint", "test"]
fix = ["format", "lint --fix"]

# Build and install
install = "uv sync --extra dev"
install-prod = "uv sync"
build = "uv build"

# Documentation (placeholder for future)
docs = "echo 'Documentation generation not yet configured'"
docs-serve = "echo 'Documentation serving not yet configured'"

# Development helpers
clean = "rm -rf .pytest_cache .coverage htmlcov dist .ruff_cache"
version = { "shell" = "echo 'awesome-python-template version:' && python -c 'import awesome_python_template; print(awesome_python_template.__version__)'" }

[tool.poe.tasks.typecheck]
help = "Run type checking with mypy"
cmd = "echo 'Type checking not yet configured - consider adding mypy'"

[tool.poe.tasks.security]
help = "Run security checks with bandit"  
cmd = "echo 'Security scanning not yet configured - consider adding bandit'"

# Pre-commit style combined task
[tool.poe.tasks.pre-commit]
help = "Run all pre-commit checks"
sequence = ["format", "lint", "test-fast"]
